# parvati

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: deserializer_key_values.rs  lib.rs  mysql.rs  serializer_key_values.rs  serializer_types.rs  serializer_values.rs  sqlite.rs
orm_derive/: Cargo.toml  README.md
orm_derive/src/: lib.rs
parvati_derive/: Cargo.toml  README.md
test/: Cargo.toml  create_table_mysql.sql  create_table_sqlite.sql
test/src/: main.rs
