[package]
name = "parvati_derive"
version = "1.0.1"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/orm-lib/tree/main/orm_derive"
license-file = "../LICENSE"
keywords = ["orm", "sql", "database", "sqlite"]
categories = ["database"]
readme = "README.md"
description = "Derive for Parvati"

[lib]
proc-macro = true


[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
parvati = { path = "../lib", version = "1.0.0"}



